--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <li><a href="fff.html">Английский</a></li>
                 </ul>
             </li>
-            <li><a href="personal account.html">Войти</a></li>
+            <li><a href="ggg.html">Войти</a></li>
         </ul>
     </div>
 
